--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="${app_name}"
-            android:theme="@style/Theme.PlayCompose">
+            android:screenOrientation="fullSensor"
+            android:theme="@style/Theme.PlayCompose"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
