--- a/version/gradle/libs.versions.toml
+++ b/version/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ material = "1.12.0"
 coroutines = "1.8.1"
 appcompat = "1.7.0"
 coreKtx = "1.13.1"
-activity = "1.9.2"
+activity = "1.9.3"
 fragment = "1.8.4"
 lifecycle = "2.8.6"
 multidex = "2.0.1"
@@ -19,10 +19,10 @@ webkit = "1.12.1"
 navigation = "2.8.3"
 room = "2.6.1"
 paging = "3.3.2"
-anonotion = "1.8.2"
+anonotion = "1.9.0"
 
 # compose
-composeBom = "2024.09.03"
+composeBom = "2024.10.00"
 constraintLayoutCompose = "1.0.1"
 accompanistCoil = "0.15.0"
 
@@ -76,6 +76,7 @@ androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", 
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-util = { group = "androidx.compose.ui", name = "ui-util" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-material = { group = "androidx.compose.material", name = "material" }
 androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
 androidx-constraintlayout-compose = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "constraintLayoutCompose" }
@@ -108,7 +109,7 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version = "1.7.3"}
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version = "1.7.4"}
 leakcanary-android = { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanary" }
 blockcanary-android = { group = "com.github.markzhai", name = "blockcanary-android", version.ref = "blockCanary" }
 
@@ -126,8 +127,7 @@ androidx = ["kotlinx-coroutines-core", "androidx-appcompat", "androidx-core-ktx"
     "androidx-navigation-ui-ktx", "androidx-navigation-compose",
     "androidx-room-ktx", "androidx-room-runtime", "androidx-room-paging",
     "androidx-paging-runtime", "androidx-paging-compose",
-    "androidx-ui", "androidx-ui-util", "androidx-material", "androidx-material-icons-extended",
-    "androidx-constraintlayout-compose", "accompanist-coil"]
+    "androidx-ui", "androidx-ui-util", "androidx-material3", "androidx-constraintlayout-compose", "accompanist-coil"]
 thirdPart = ["retrofit", "retrofit-converter-gson", "retrofit-converter-scalars",
     "okhttp3-logging-interceptor", "gson", "auto-service", "protobuf-javalite", "agentweb-core"]
 compiler = ["androidx-annotation-compiler", "androidx-room-compiler", "autoservice-compiler"]
